Rafal and Harun

--- a/i_talks.html
+++ b/i_talks.html
@@ -95,7 +95,7 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
-<a href="https://sochisirius.ru/preview/obuchenie/graduates/smena951?uid=0bfdba6864a9018112a33a0615b67e36&_edit=/admin/app/shift/951/edit"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+<a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
 </p>
 
 
