--- a/index.html
+++ b/index.html
@@ -44,6 +44,55 @@
         <div id="content">
 
 
+
+          <h3>July 4, 2021</h3>
+          <h1>Two New Interns</h1>
+          <br>
+
+          Two new people joined my team as Summer research interns:
+          <br><br>
+
+          <b>Rafał Szlendak</b> joined  as an undergraduate intern.  Rafal is studying towards a <a href="https://warwick.ac.uk/study/undergraduate/courses/mathsstatsbsc/">BSc degree in Mathematics and Statistics</a> at the <a href="https://warwick.ac.uk">University of Warwick</a>, United Kingdom. He was involved in a researhc project entitled "Properties and characterisations of sequences generated
+by weighted context-free grammars with one terminal symbol". Among Rafal’s successes belong
+          <br>
+          - Ranked #1 in the Mathematics and Statistics Programme at Warwick, 2020
+          <br>
+          - Finalist, Polish National Mathematical Olympiad, 2017 and 2018
+          <br>
+          - Member of MATEX: an experimental mathematics programme for gifted students. This high school was ranked the top high school in Poland in the 2019 Perspektywy ranking.
+
+
+
+         <br>
+         <br>
+          <b>Muhammad Harun Ali Khan</b> joined as an undergraduate intern. Harun is a US citizen of Pakistani ancestry, and studies towards a <a href="https://www.imperial.ac.uk/study/ug/courses/mathematics-department/mathematics-bsc/">BSc degree in Mathematics</a> at <a href="https://www.imperial.ac.uk">Imperial College London</a>. He has interests in
+          number theory, artificial intelligence and doing mathematics via the <a href="https://en.wikipedia.org/wiki/Lean_(proof_assistant)">Lean proof assistant</a>. Harun is the Head of Imperial College mathematics competition problem selection committee.
+          Harun has been active in various mathematics competition at <thead>
+          high school and university level. Some of his most notable recognitions and awards include
+          </thead>
+          <br>
+          - <a href="https://www.imc-math.org.uk/?act=results&by=sum&year=2020">2nd Prize, International Mathematics Competition for University Students, 2020</a>
+          <br>
+          - Imperial College UROP Prize (for formalizing Fibonacci Squares in Lean)
+          <br>
+          - Imperial College Mathematics Competition, First Place in First Round
+          <br>
+          - <a href="https://www.imo-official.org/participant_r.aspx?id=27280">Bronze Medal, International Mathematical Olympiad, United Kingdom, 2019</a>
+          <br>
+          - <a href="https://www.apmo-official.org/country_report/PAK/2019">Bronze Medal, Asian Pacific Mathematics Olympiad, 2019</a>
+          <br>
+          - Honorable Mention, International Mathematical Olympiad, Romania, 2018
+          <br>
+          - Honorable Mention, International Mathematical Olympiad, Brazil, 2018
+         <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
           <h3>June 9, 2021</h3>
           <h1>New Paper</h1>
           <br>
