--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           Two new people joined my team as Summer research interns:
           <br><br>
 
-          <b>Rafał Szlendak</b> joined  as an undergraduate intern.  Rafal is studying towards a <a href="https://warwick.ac.uk/study/undergraduate/courses/mathsstatsbsc/">BSc degree in Mathematics and Statistics</a> at the <a href="https://warwick.ac.uk">University of Warwick</a>, United Kingdom. He was involved in a researhc project entitled "Properties and characterisations of sequences generated
+          <b>Rafał Szlendak</b> joined as an undergraduate intern.  Rafal is studying towards a <a href="https://warwick.ac.uk/study/undergraduate/courses/mathsstatsbsc/">BSc degree in Mathematics and Statistics</a> at the <a href="https://warwick.ac.uk">University of Warwick</a>, United Kingdom.
+          He was involved in a research project entitled "Properties and characterisations of sequences generated
 by weighted context-free grammars with one terminal symbol". Among Rafal’s successes belong
           <br>
           - Ranked #1 in the Mathematics and Statistics Programme at Warwick, 2020
@@ -67,7 +68,7 @@ by weighted context-free grammars with one terminal symbol". Among Rafal’s suc
          <br>
           <b>Muhammad Harun Ali Khan</b> joined as an undergraduate intern. Harun is a US citizen of Pakistani ancestry, and studies towards a <a href="https://www.imperial.ac.uk/study/ug/courses/mathematics-department/mathematics-bsc/">BSc degree in Mathematics</a> at <a href="https://www.imperial.ac.uk">Imperial College London</a>. He has interests in
           number theory, artificial intelligence and doing mathematics via the <a href="https://en.wikipedia.org/wiki/Lean_(proof_assistant)">Lean proof assistant</a>. Harun is the Head of Imperial College mathematics competition problem selection committee.
-          Harun has been active in various mathematics competition at <thead>
+          Harun has been active in various mathematics competitions at <thead>
           high school and university level. Some of his most notable recognitions and awards include
           </thead>
           <br>
