--- a/i_team.html
+++ b/i_team.html
@@ -59,6 +59,7 @@
 
           <h2>Postdocs </h2>
           <ul>
+            <li><a href="https://k3nfalt.github.io">Alexander Tyurin</a> (7/2021-present)</li>
             <li><a href="https://fhanzely.github.io">Filip Hanzely</a> (8/2020-11/2020)</li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020)</li>
@@ -101,6 +102,7 @@
 
           <h2> Research Interns</h2>
           <ul>
+            <li><a href="">Rafał Szlendak</a> (Warwick), 7/2021-9/2021 </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 6/2021-9/2021 </li>
             <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-8/2021 </li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2021</li>
