--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@ by weighted context-free grammars with one terminal symbol". Among Rafal’s suc
          <br>
           <b>Muhammad Harun Ali Khan</b> joined as an undergraduate intern. Harun is a US citizen of Pakistani ancestry, and studies towards a <a href="https://www.imperial.ac.uk/study/ug/courses/mathematics-department/mathematics-bsc/">BSc degree in Mathematics</a> at <a href="https://www.imperial.ac.uk">Imperial College London</a>. He has interests in
           number theory, artificial intelligence and doing mathematics via the <a href="https://en.wikipedia.org/wiki/Lean_(proof_assistant)">Lean proof assistant</a>. Harun is the Head of Imperial College mathematics competition problem selection committee.
-          Harun has been active in various mathematics competitions at <thead>
-          high school and university level. Some of his most notable recognitions and awards include
-          </thead>
+          Harun has been active in various mathematics competitions at high school and university level. Some of his most notable recognitions and awards include          
           <br>
           - <a href="https://www.imc-math.org.uk/?act=results&by=sum&year=2020">2nd Prize, International Mathematics Competition for University Students, 2020</a>
           <br>
