--- a/i_team.html
+++ b/i_team.html
@@ -102,9 +102,10 @@
 
           <h2> Research Interns</h2>
           <ul>
-            <li><a href="">Rafał Szlendak</a> (Warwick), 7/2021-9/2021 </li>
-            <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 6/2021-9/2021 </li>
-            <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-8/2021 </li>
+            <li>Rafał Szlendak (Warwick), 7/2021-present </li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 6/2021-present </li>
+            <li> Bokun Wang (University of California, Davis), 5/2020-8/2021</li>
+            <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-present </li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2021</li>
             <li> Bokun Wang (University of California, Davis), 9/2020-3/2021</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-3/2021</li>
