--- a/i_papers.html
+++ b/i_papers.html
@@ -108,7 +108,7 @@
 
           [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin and Alexander Gasnikov<br>
           <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
-          38th International Conference on Machine Learning (ICML 2021) <br>
+          <a href="http://proceedings.mlr.press/v139/kovalev21a.html">38th International Conference on Machine Learning (ICML 2021)</a> <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [<a href="https://www.youtube.com/watch?v=jO3t4eZFdkc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=37">5 min video</a>] [<a href="posters/Poster-ADOM-ICML-2021.pdf">poster</a>] [code: ADOM] <br>
           <br>
@@ -121,7 +121,7 @@
 
           [155] Eduard Gorbunov, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>MARINA: faster non-convex distributed learning with compression </b><br>
-          38th International Conference on Machine Learning (ICML 2021) <br>
+          <a href="http://proceedings.mlr.press/v139/gorbunov21a.html">38th International Conference on Machine Learning (ICML 2021) </a> <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [<a href="https://www.youtube.com/watch?v=o5MwC4DYbGE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=34">5 min video</a>] [<a href="https://www.youtube.com/watch?v=bj0E94Siq74">70 min video</a>] [poster]  [code: MARINA, VR-MARINA, PP-MARINA] <br>
@@ -137,7 +137,7 @@
 
           [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
-          38th International Conference on Machine Learning (ICML 2021) <br>
+          <a href="http://proceedings.mlr.press/v139/islamov21a.html">38th International Conference on Machine Learning (ICML 2021)</a> <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="https://www.youtube.com/watch?v=iSKBZXlaoWo&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=41">5 min video</a>] [<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">80 min video</a>] [<a href="talks/TALK-2021-Newton-Learn.pdf">slides</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
@@ -242,8 +242,8 @@
 
           [138] Zhize Li, Hongyan Bao, Xiangliang Zhang and Peter Richtárik <br>
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
+          <a href="http://proceedings.mlr.press/v139/li21a.html">38th International Conference on Machine Learning (ICML 2021) </a><br>
           <a href="https://opt-ml.org/papers/2020/paper_76.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) <span class="important">(Spotlight Talk)</span></a> <br>
-          38th International Conference on Machine Learning (ICML 2021) <br>
           [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [<a href="https://www.youtube.com/watch?v=_K3XPxN-vdk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=29">5 min video</a>] [code: PAGE] <br>
           <br>
 
@@ -436,49 +436,41 @@
           MISO]<br>
           <br>
 
-          [108] Eduard Gorbunov, Adel Bibi, Ozan Sezer, El Houcine
-          Bergou and Peter Richtárik<br>
-          <b>A stochastic derivative free optimization method with
-            momentum</b><br>
-          <a href="https://openreview.net/forum?id=HylAoJSKvH">8th
-            International Conference on Learning Representations</a>
-          (ICLR 2020)<br>
+          [108] Eduard Gorbunov, Adel Bibi, Ozan Sezer, El Houcine Bergou and Peter Richtárik<br>
+          <b>A stochastic derivative free optimization method with momentum</b><br>
+          <a href="https://openreview.net/forum?id=HylAoJSKvH">8th International Conference on Learning Representations</a>(ICLR 2020)<br>
           [<a href="https://arxiv.org/abs/1905.13278">arXiv</a>] [<a
             href="posters/Poster-SMTP.pdf">poster</a>] [code: SMTP]<br>
           <br>
 
           [107] Mher Safaryan and Peter Richtárik<br>
           <b>Stochastic Sign Descent Methods: New Algorithms and Better Theory</b><br>
-          38th International Conference on Machine Learning (ICML 2021)<br>
+          <a href="http://proceedings.mlr.press/v139/safaryan21a.html">38th International Conference on Machine Learning (ICML 2021)</a><br>
           <a href="https://opt-ml.org/papers/2020/paper_14.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           [<a href="https://arxiv.org/abs/1905.12938">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_14.png">poster</a>] [code: signSGD, signSGDmaj]<br>
           <br>
 
           [106] Adil Salim, Dmitry Kovalev and Peter Richtárik<br>
-          <b>Stochastic proximal Langevin algorithm: potential splitting
-            and nonasymptotic rates</b><br>
+          <b>Stochastic proximal Langevin algorithm: potential splitting and nonasymptotic rates</b><br>
           <a href="http://papers.nips.cc/paper/8891-stochastic-proximal-langevin-algorithm-potential-splitting-and-nonasymptotic-rates">33rd Conference on Neural Information Processing Systems</a>
           (NeurIPS 2019)<br>
           [<a href="https://arxiv.org/abs/1905.11768">arXiv</a>] [<a
             href="posters/Poster-SPLA.pdf">poster</a>] [code: SPLA]<br>
           <br>
 
-          [105] Aritra Dutta, El Houcine Bergou, Yunming Xiao, Marco
-          Canini and Peter Richtárik<br>
+          [105] Aritra Dutta, El Houcine Bergou, Yunming Xiao, Marco Canini and Peter Richtárik<br>
           <b>Direct nonlinear acceleration</b><br>
           [<a href="https://arxiv.org/abs/1905.11692">arXiv</a>] [code:
           DNA]<br>
           <br>
 
           [104] Konstantin Mishchenko and Peter Richtárik<br>
-          <b>A stochastic decoupling method for minimizing the sum of
-            smooth and non-smooth functions</b><br>
+          <b>A stochastic decoupling method for minimizing the sum of smooth and non-smooth functions</b><br>
           [<a href="https://arxiv.org/abs/1905.11535">arXiv</a>] [code:
           SDM]<br>
           <br>
 
-          [103] Konstantin Mishchenko, Dmitry Kovalev, Egor Shulgin,
-          Peter Richtárik and Yura Malitsky<br>
+          [103] Konstantin Mishchenko, Dmitry Kovalev, Egor Shulgin, Peter Richtárik and Yura Malitsky<br>
           <b>Revisiting stochastic extragradient</b><br>
           <a href="http://proceedings.mlr.press/v108/mishchenko20a.html">The 23rd International Conference on Artificial Intelligence and Statistics (AISTATS 2020)</a><br>
           NeuriPS 2019 Workshop on Smooth Games Optimization and Machine  Learning<br>
@@ -486,17 +478,14 @@
           <br>
 
           [102] Filip Hanzely and Peter Richtárik<br>
-          <b>One method to rule them all: variance reduction for data,
-            parameters and many new methods</b><b><br>
+          <b>One method to rule them all: variance reduction for data, parameters and many new methods</b><b><br>
           </b> [<a href="https://arxiv.org/abs/1905.11266">arXiv</a>]
           [code: GJS + 17 algorithms]<br>
           <br>
 
           [101] Eduard Gorbunov, Filip Hanzely and Peter Richtárik<br>
-          <b>A unified theory of SGD: variance reduction, sampling,
-            quantization and coordinate descent</b><br>
-          <a href="http://proceedings.mlr.press/v108/gorbunov20a">The 23rd International Conference on Artificial Intelligence
-          and Statistics (AISTATS 2020)</a><br>
+          <b>A unified theory of SGD: variance reduction, sampling, quantization and coordinate descent</b><br>
+          <a href="http://proceedings.mlr.press/v108/gorbunov20a">The 23rd International Conference on Artificial Intelligence and Statistics (AISTATS 2020)</a><br>
           [<a href="https://arxiv.org/abs/1905.11261">arXiv</a>]<br>
           <br>
 
@@ -621,6 +610,7 @@
 
           [83] Nicolas Loizou, Michael G. Rabbat and Peter Richtárik<br>
           <b>Provably accelerated randomized gossip algorithms</b> <br>
+          <a href="https://ieeexplore.ieee.org/document/8683847">2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2019)</a><br>
           [<a href="https://arxiv.org/abs/1810.13084">arXiv</a>] [code: AccGossip]<br>
           <br>
 
@@ -708,7 +698,7 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
 
           [72] Filip Hanzely and Peter Richtárik <br>
           <b>Fastest rates for stochastic mirror descent methods</b><br>
-          Computational Optimization and Applications, 2021<br>
+          <a href="https://link.springer.com/article/10.1007/s10589-021-00284-5">Computational Optimization and Applications 79:717–766, 2021</a><br>
           [<a href="https://arxiv.org/abs/1803.07374">arXiv</a>]<br>
           <br>
 
@@ -1271,8 +1261,9 @@ href="posters/Poster-Minibatch-ICML2013.pdf">poster</a>]
 <h1>Prepared in 2012 or earlier</h1>
 
 
-<p> [12] Peter Richtárik, Martin Takáč and Selin Damla Ahipasaoglu<br>
+<p> [12] Peter Richtárik, Majid Jahani, Martin Takáč and Selin Damla Ahipasaoglu<br>
 <b>Alternating maximization: unifying framework for 8 sparse PCA formulations and efficient parallel codes</b><br>
+<a href="https://link.springer.com/article/10.1007/s11081-020-09562-3">ptimization and Engineering, 2020</a> <br>
 [<a href="http://arxiv.org/abs/1212.4137">arXiv</a>] [code: <a href="https://code.google.com/p/24am/">24am</a>]
 </p>
 
