--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ by weighted context-free grammars with one terminal symbol". Among Rafal’s suc
          <br>
           <b>Muhammad Harun Ali Khan</b> joined as an undergraduate intern. Harun is a US citizen of Pakistani ancestry, and studies towards a <a href="https://www.imperial.ac.uk/study/ug/courses/mathematics-department/mathematics-bsc/">BSc degree in Mathematics</a> at <a href="https://www.imperial.ac.uk">Imperial College London</a>. He has interests in
           number theory, artificial intelligence and doing mathematics via the <a href="https://en.wikipedia.org/wiki/Lean_(proof_assistant)">Lean proof assistant</a>. Harun is the Head of Imperial College mathematics competition problem selection committee.
-          Harun has been active in various mathematics competitions at high school and university level. Some of his most notable recognitions and awards include          
+          Harun has been active in various mathematics competitions at high school and university level. Some of his most notable recognitions and awards include
           <br>
           - <a href="https://www.imc-math.org.uk/?act=results&by=sum&year=2020">2nd Prize, International Mathematics Competition for University Students, 2020</a>
           <br>
@@ -256,7 +256,7 @@ We've had several papers accepted to the <a href="https://icml.cc/Conferences/20
 Here they are:<br><br>
 
 
-<b> 1) <a href="https://arxiv.org/abs/2102.07845">"MARINA: Faster Non-convex Distributed Learning with Compression"</a></b> - joint work with
+<b> 1) "MARINA: Faster Non-convex Distributed Learning with Compression"</b> <a href="https://arxiv.org/abs/2102.07845">[arXiv]</a> [<a href="http://proceedings.mlr.press/v139/gorbunov21a.html">ICML</a>]  - joint work with
 <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>,
 <a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> and <a href="https://zhizeli.github.io">Zhize Li</a>.<br>
 <br>
@@ -276,7 +276,7 @@ More material:
 
 
 
-<b> 2) <a href="https://arxiv.org/abs/2008.10898">"PAGE: A Simple and Optimal Probabilistic Gradient Estimator for Nonconvex Optimization"</a> </b> - joint work with
+<b> 2) "PAGE: A Simple and Optimal Probabilistic Gradient Estimator for Nonconvex Optimization"</b> <a href="https://arxiv.org/abs/2008.10898">[arXiv]</a> <a href="http://proceedings.mlr.press/v139/li21a.html">[ICML]</a>  - joint work with
 <a href="https://zhizeli.github.io">Zhize Li</a>, <a href="https://cemse.kaust.edu.sa/people/person/hongyan-bao">Hongyan Bao</a>, and <a href="https://cemse.kaust.edu.sa/people/person/xiangliang-zhang">Xiangliang Zhang</a>.
 <br>
 <br>
@@ -297,7 +297,7 @@ More material:
 <br>
 
 
-<b> 3) <a href="https://arxiv.org/abs/2102.07158">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a> </b> - work of  <a
+<b> 3) "Distributed Second Order Methods with Fast Rates and Compressed Communication" </b> <a href="https://arxiv.org/abs/2102.07158">[arXiv]</a> <a href="http://proceedings.mlr.press/v139/islamov21a.html">[ICML]</a> - joint work with  <a
 href="https://rustem-islamov.github.io">Rustem Islamov</a> and <a href="https://qianxunk.github.io">Xun Qian</a>.<br>
 <br>
 
@@ -316,7 +316,7 @@ More material:
 <br>
 
 
-<b> 4) <a href="https://arxiv.org/abs/1905.12938">"Stochastic Sign Descent Methods: New Algorithms and Better Theory"</a> </b> - joint work with <a href="https://mher-safaryan.github.io">Mher Safaryan</a>. <br>
+<b> 4) "Stochastic Sign Descent Methods: New Algorithms and Better Theory" </b>  <a href="https://arxiv.org/abs/1905.12938">[arXiv]</a> <a href="http://proceedings.mlr.press/v139/safaryan21a.html">[ICML]</a>  - joint work with <a href="https://mher-safaryan.github.io">Mher Safaryan</a>. <br>
 <br>
 
 Abstract: <i>
@@ -331,7 +331,7 @@ More material:
 <br>
 
 
-<b> 5) <a href="https://arxiv.org/abs/2102.09234">"ADOM: Accelerated Decentralized Optimization Method for Time-Varying Networks"</a> </b>
+<b> 5) "ADOM: Accelerated Decentralized Optimization Method for Time-Varying Networks"</b> <a href="https://arxiv.org/abs/2102.09234">[arXiv] </a> <a href="http://proceedings.mlr.press/v139/kovalev21a.html">[ICML] </a> 
 - joint work with
 <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://shulgin-egor.github.io">Egor Shulgin</a>,
  <a
