--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
         <div id="content">
 
 
+          <h3>July 12, 2021</h3>
+          <h1>Optimization Without Borders Conference (Nesterov 65)</h1>
+          <br>
+
+          Today I am giving a talk at the <a href="https://cs.hse.ru/hdilab/opti/">"Optimization Without Borders"</a> conference, organized in the honor of <a href="https://en.wikipedia.org/wiki/Yurii_Nesterov">Yurii Nesterov's</a> 65th Birthday. This is a hybrid
+          event, with online and offline participants. The offline part takes place at the <a href="https://siriusuniversity.ru">Sirius University</a> in Sochi, Russia.
+          <br>    <br>
+          Other speakers at the event (in order of giving talks at the event): Gasnikov, Nesterov, myself, Spokoiny, Mordukhovich, Bolte, Belomestny, Srebro,
+          Zaitseva, Protasov, Shikhman, d'Aspremont, Polyak, Taylor, Stich, Teboulle, Lasserre, Nemirovski,  Vorobiev,
+          Yanitsky, Bakhurin, Dudorov, Molokov, Gornov, Rogozin, Hildebrand, Dvurechensky, Moulines, Juditsky,
+          Sidford, Tupitsa, Kamzolov, and Anikin.
+
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
           <h3>July 4, 2021</h3>
           <h1>Two New Interns</h1>
@@ -331,7 +351,7 @@ More material:
 <br>
 
 
-<b> 5) "ADOM: Accelerated Decentralized Optimization Method for Time-Varying Networks"</b> <a href="https://arxiv.org/abs/2102.09234">[arXiv] </a> <a href="http://proceedings.mlr.press/v139/kovalev21a.html">[ICML] </a> 
+<b> 5) "ADOM: Accelerated Decentralized Optimization Method for Time-Varying Networks"</b> <a href="https://arxiv.org/abs/2102.09234">[arXiv] </a> <a href="http://proceedings.mlr.press/v139/kovalev21a.html">[ICML] </a>
 - joint work with
 <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://shulgin-egor.github.io">Egor Shulgin</a>,
  <a
