--- a/index.html
+++ b/index.html
@@ -65,6 +65,38 @@
           <br>
 
 
+          <h3>July 5, 2021</h3>
+          <h1>New Postdoc: Alexander Tyurin</h1>
+          <br>
+
+          <a href="https://k3nfalt.github.io">Alexander Tyurin</a> has joined my
+          Optimization and Machine Learning lab as a postdoc. Welcome!!!
+
+<br> <br>
+          Alexander obtained his PhD from
+          the Higher School of Economics (HSE) in December 2020, under the supervision of <a href="https://scholar.google.ru/citations?user=AmeE8qkAAAAJ">Alexander
+          Gasnikov</a>, with the thesis "Development of a method for solving structural
+          optimization problems". His 15 research papers can be found on <a href="https://scholar.google.com/citations?user=Es8-xocAAAAJ">Google Scholar</a>. He has a masters degree in CS from
+          HSE (2017), with a GPA of 9.84 / 10, and a BS degree in Computational Mathematics and Cybernetics from
+          Lomonosov Moscow State University, with a GPA of 4.97 / 5.
+
+<br> <br>
+           During his studies, and for a short period of time after his PhD,
+          Alexander worked as a research and development engineer in the Yandex self-driving cars team, where he was developing real-time algorithms for dynamic and static objects detection in a perception team
+          for self-driving cars Using lidar (3D point clouds) and cameras (images) sensors.
+        His primary responsibilities there ranged from the creation of datasets, throught research (Python, SQL, MapReduce) and implementation of the
+        proposed algorithms (C++). Prior to this, he was a Research Engineer at VisionLabs in Moscow where he developed a face recognition
+        algorithm that achieved a top 2 result in the FRVT NIST international competition.
+
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
           <h3>July 4, 2021</h3>
           <h1>Two New Interns</h1>
           <br>
