--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [168] 50+ authors<br>
+          <b>A field guide to federated optimization</b><br>
+          [<a href="https://arxiv.org/abs/2107.06917">arXiv</a>] <br>
+          <br>
+
           [167] Peter Richtárik, Igor Sokolov and Ilyas Fatkhullin<br>
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
           [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [code: EF21, EF21+]<br>
