--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@
         <div id="content">
 
 
+          <h3>July 14, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2107.06917">"A Field Guide to Federated Optimization"</a> -
+          joint work with Jianyu Wang, Zachary Charles, Zheng Xu, Gauri Joshi, H. Brendan McMahan, Blaise Aguera y Arcas, Maruan Al-Shedivat,
+          Galen Andrew, Salman Avestimehr, Katharine Daly, Deepesh Data, Suhas Diggavi, Hubert Eichner, Advait Gadhikar, Zachary Garrett,
+          Antonious M. Girgis, Filip Hanzely, Andrew Hard, Chaoyang He, Samuel Horv\'{a}th, Zhouyuan Huo, Alex Ingerman, Martin Jaggi, 
+          Tara Javidi, Peter Kairouz, Satyen Kale, Sai Praneeth Karimireddy, Jakub Kone\v{c}n\'{y}, Sanmi Koyejo, Tian Li, Luyang Liu,
+          Mehryar Mohri, Hang Qi, Sashank J. Reddi, Karan Singhal, Virginia Smith, Mahdi Soltanolkotabi, Weikang Song, Ananda Theertha Suresh,
+          Sebastian U. Stich, Ameet Talwalkar, Hongyi Wang, Blake Woodworth, Shanshan Wu, Felix X. Yu, Honglin Yuan, Manzil Zaheer,
+          Mi Zhang, Tong Zhang, Chunxiang Zheng, Chen Zhu, Wennan Zhu.<br>
+          <br>
+
+          Abstract: <i>
+Federated learning and analytics are a distributed approach for collaboratively learning models (or statistics) from decentralized data, motivated by and designed for privacy protection. The distributed learning process can be formulated as solving federated optimization problems, which emphasize communication efficiency, data heterogeneity, compatibility with privacy and system requirements, and other constraints that are not primary considerations in other problem settings. This paper provides recommendations and guidelines on formulating, designing, evaluating and analyzing federated optimization algorithms through concrete examples and practical implementation, with a focus on conducting effective simulations to infer real-world performance. The goal of this work is not to survey the current literature, but to inspire researchers and practitioners to design federated learning algorithms that can be used in various practical applications.
+</i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>July 12, 2021</h3>
           <h1>Optimization Without Borders Conference (Nesterov 65)</h1>
           <br>
