--- a/i_papers.html
+++ b/i_papers.html
@@ -52,13 +52,21 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [169] Zhize Li and Peter Richtárik<br>
+          <b>CANITA: Faster rates for distributed convex optimization with communication compression</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2107.09461">arXiv</a>] <br>
+          <br>
+
           [168] 50+ authors<br>
           <b>A field guide to federated optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2107.06917">arXiv</a>] <br>
           <br>
 
           [167] Peter Richtárik, Igor Sokolov and Ilyas Fatkhullin<br>
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [code: EF21, EF21+]<br>
           <br>
 
