--- a/i_talks.html
+++ b/i_talks.html
@@ -95,18 +95,24 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
-<a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+<a href="http://federated-learning.org/fl-icml-2021/">International Workshop on Federated Learning for User Privacy and Data Confidentiality
+in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organizer and speaker)
 </p>
-
 
 
 <h1>2021 Talks</h1>
 
+<p>
+<a href="https://www.siam.org/conferences/cm/conference/op21"> SIAM Conference on Optimization</a>, virtual, July 20-23, 2021 (invited)
+</p>
+
+<p>
+<a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+</p>
 
 <p>
 [178] Talk 2 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 29, 2021
 </p>
-
 
 <p>
 [177] Talk 1 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 28, 2021
