--- a/index.html
+++ b/index.html
@@ -44,24 +44,13 @@
         <div id="content">
 
 
-          <h3>July 14, 2021</h3>
-          <h1>New Paper</h1>
+          <h3>July 20, 2021</h3>
+          <h1>Talk at SIAM Conference on Optimization</h1>
           <br>
 
-          <span class="important">New paper out: </span>
-          <a href="https://arxiv.org/abs/2107.06917">"A Field Guide to Federated Optimization"</a> -
-          joint work with Jianyu Wang, Zachary Charles, Zheng Xu, Gauri Joshi, H. Brendan McMahan, Blaise Aguera y Arcas, Maruan Al-Shedivat,
-          Galen Andrew, Salman Avestimehr, Katharine Daly, Deepesh Data, Suhas Diggavi, Hubert Eichner, Advait Gadhikar, Zachary Garrett,
-          Antonious M. Girgis, Filip Hanzely, Andrew Hard, Chaoyang He, Samuel Horv\'{a}th, Zhouyuan Huo, Alex Ingerman, Martin Jaggi, 
-          Tara Javidi, Peter Kairouz, Satyen Kale, Sai Praneeth Karimireddy, Jakub Kone\v{c}n\'{y}, Sanmi Koyejo, Tian Li, Luyang Liu,
-          Mehryar Mohri, Hang Qi, Sashank J. Reddi, Karan Singhal, Virginia Smith, Mahdi Soltanolkotabi, Weikang Song, Ananda Theertha Suresh,
-          Sebastian U. Stich, Ameet Talwalkar, Hongyi Wang, Blake Woodworth, Shanshan Wu, Felix X. Yu, Honglin Yuan, Manzil Zaheer,
-          Mi Zhang, Tong Zhang, Chunxiang Zheng, Chen Zhu, Wennan Zhu.<br>
-          <br>
-
-          Abstract: <i>
-Federated learning and analytics are a distributed approach for collaboratively learning models (or statistics) from decentralized data, motivated by and designed for privacy protection. The distributed learning process can be formulated as solving federated optimization problems, which emphasize communication efficiency, data heterogeneity, compatibility with privacy and system requirements, and other constraints that are not primary considerations in other problem settings. This paper provides recommendations and guidelines on formulating, designing, evaluating and analyzing federated optimization algorithms through concrete examples and practical implementation, with a focus on conducting effective simulations to infer real-world performance. The goal of this work is not to survey the current literature, but to inspire researchers and practitioners to design federated learning algorithms that can be used in various practical applications.
-</i>
+          Today I gave a talk in the <a href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=71575">Recent Advancements in Optimization Methods for Machine Learning - Part I of III</a> minisymposium
+          at the <a href="https://www.siam.org/conferences/cm/conference/op21">SIAM Conference on Optimization.</a> The conference was originally supposed to take place in Hong Kong in 2020, but due to the Covid-19
+          situation, this was not to be. Instead, the event is happening this year, and virtually. I was on the organizing committee for the conference, jointly resposible for inviting plenary and tutorial speakers.
           <br>
 
           <br>
@@ -69,6 +58,29 @@ Federated learning and analytics are a distributed approach for collaboratively 
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
+
+
+          <h3>July 20, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2107.09461">"CANITA: Faster Rates for Distributed Convex Optimization with Communication Compression"</a> -
+          joint work with <a href="https://zhizeli.github.io">Zhize Li</a>.<br>
+          <br>
+          <br>
+          In this work we develop and analyze the first distributed gradient method  capable in the convex regime of benefiting from
+          communication compression and acceleration/momentum at the same time. The strongly convex regime was first handled in the <a href="http://proceedings.mlr.press/v119/li20g.html">ADIANA
+          paper (ICML 2020)</a>, and the nonconvex regime in the <a href="http://proceedings.mlr.press/v139/gorbunov21a.html">MARINA paper (ICML 2021)</a>.
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
 
 
 
