--- a/i_talks.html
+++ b/i_talks.html
@@ -60,11 +60,6 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 3-
 
 
 <p>
-<a href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM Conference on Optimization,</a> The Hong Kong Polytechnic
-University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <span class="important">postponed until 2021 due to Covid-19</span>
-</p>
-
-<p>
 Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
@@ -103,11 +98,11 @@ in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organ
 <h1>2021 Talks</h1>
 
 <p>
-<a href="https://www.siam.org/conferences/cm/conference/op21"> SIAM Conference on Optimization</a>, virtual, July 20-23, 2021 (invited)
+[180] <a href="https://www.siam.org/conferences/cm/conference/op21"> SIAM Conference on Optimization</a>, virtual, July 20-23, 2021 (invited)
 </p>
 
 <p>
-<a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+[179] <a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
 </p>
 
 <p>
