--- a/i_papers.html
+++ b/i_papers.html
@@ -250,6 +250,7 @@
 
           [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
           <b>Quasi-Newton methods for deep learning: forget the past, just sample</b><br>
+          To appear in: Optimization Methods and Software, 2021 <br>
           [<a href="https://arxiv.org/abs/1901.09997v4">arXiv</a>] [code: S-LBFGS, S-LSR1]  <br>
           <br>
 
