--- a/i_papers.html
+++ b/i_papers.html
@@ -67,7 +67,7 @@
           [167] Peter Richtárik, Igor Sokolov and Ilyas Fatkhullin<br>
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [code: EF21, EF21+]<br>
+          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [code: EF21, EF21+]<br>
           <br>
 
           [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
